ajusta componente Grid

--- a/src/app/components/grid/grid.component.scss
+++ b/src/app/components/grid/grid.component.scss
@@ -1,6 +1,11 @@
 .grid {
   margin: 2rem 2rem;
 
+  .title {
+    text-align: center;
+    margin-bottom: 1rem;
+  }
+
   .adicionar-button {
     height: 1rem;
     margin-bottom: 2rem;
