--- a/src/app/components/grid/grid.component.html
+++ b/src/app/components/grid/grid.component.html
@@ -1,11 +1,13 @@
 <section class="grid">
+  <h1 class="title">Gerenciamento de funcionários</h1>
+
   <div class="adicionar-button">
     <button
       type="button"
       class="btn btn-primary btn-sm"
       (click)="adicionarFuncionario()"
     >
-      Adicionar usuário
+      Adicionar funcionário
     </button>
   </div>
   <div class="table-responsive">
@@ -53,24 +55,10 @@
   </div>
 </section>
 
-<div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-  <div class="toast-header">
-    <img src="..." class="rounded me-2" alt="..." />
-    <strong class="me-auto">Bootstrap</strong>
-    <small>11 mins ago</small>
-    <button
-      type="button"
-      class="btn-close"
-      data-bs-dismiss="toast"
-      aria-label="Close"
-    ></button>
-  </div>
-  <div class="toast-body">Hello, world! This is a toast message.</div>
-</div>
-
 @if (showModal) {
 <app-modal
   [funcionarioParaEditar]="funcionarioParaEditar"
+  [modalMode]="modalMode"
   (close)="showModal = false"
   (dadosFuncionario)="recebeDadosFuncionario($event)"
 ></app-modal>
@@ -78,12 +66,14 @@
 
 <div class="grid-toast toast-container position-fixed bottom-0 end-0 p-3">
   <div
-    id="meuToast"
+    id="toast"
     class="toast bg-primary text-bg-primary"
     role="alert"
     aria-live="assertive"
     aria-atomic="true"
   >
-    <div class="toast-body">{{ toastMessage }}</div>
+    <div class="toast-body">
+      O funcionário foi <b>{{ operation }}</b> com sucesso.
+    </div>
   </div>
 </div>
